# qms-runtime

./: .gitignore  CANONICAL_MODULAR_REPOSITORY_STRUCTURE.md  CURRENT_RUNTIME_STATUS.md  README.md  inspect_runtime.py  pyproject.toml
Benchmarks/TER/: TER_Hardware_Interface_Spec.docx
Foundations/: LPFT-D Validation.ipynb
Papers-Core/: README_ImprintField_PhaseXXIV.md
Releases/RSI/: DPI - A Measurement-Plane Framework.docx  Detector-Plane Causality in Quantum Measurement - 1.docx  Detector-Plane Causality in Quantum Measurement.docx  Manuscript.docx  Marked-up Manuscript.docx  Response Letter.docx
Releases/Zenodo/: DPI - A Quantum - Classical Measurement - Plane Framework.docx  DPI.docx  Detector-plane Causality And Imprint Dynamics (master Paper).docx  Quantum Optics Framework Utility Explained.docx  dpi_2d_corrected.py  dpi_sequence_corrected.py  dpi_sweep_final.py
Simulations/: Phase0_Step1_Imprint_Feasibility.ipynb.html  phase_xxv_simulation.py
VALIDATION/internal/: runtime_integrity_test.py
VALIDATION/pyoct/: PYOCT_QMS_MAPPING.md
Ventures/MetaFLUX/: MetaFlux.docx  MetaFlux_White_Paper  - Senior Data Scientist | LLMs | GenAI | ML | DL | MLOps.docx
Ventures/QAI - Finance /: Phase0_Step1_Imprint_Feasibility.ipynb
X - The Imprint Hypothesis /: LHC Imprint signature - Output.xlsx
ZENODO_RELEASES/qms_canonical_runtime/: README.md
docs/architecture/: QMS_BOUNDARY_RULES.md
examples/: acquisition_degradation.py  qms_dashboard.py  quickstart.py  runtime_profile_runner.py
qos/: __init__.py
qos/cli/: main.py
tools/: check_qms_import_boundaries.py
(+205 files in other folders)
