[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qms-sdk"
version = "0.1.0"
description = "Quantum Measurement Stack (QMS) SDK"
readme = "README.md"
requires-python = ">=3.9"

authors = [
    { name = "Srikar R." }
]

license = { text = "MIT" }

keywords = [
    "quantum",
    "measurement",
    "coherence",
    "observability",
    "runtime",
    "diagnostics"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Scientific/Engineering :: Physics"
]

dependencies = [
    "numpy"
]

[tool.setuptools.packages.find]
include = ["qos*"]

[project.scripts]
qms = "qos.cli.main:main"
